// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCheckbox should emit events when clicked 1`] = `
<div class="v-checkbox v-checkbox--checked">
  <div class="v-checkbox__square">
    <i class="v-icon fas fa-check-square primary--text"
       style="font-size: 24px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should mount component and match snapshot 1`] = `
<div class="v-checkbox">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 24px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set "on" and "off" icon and match snapshot 1`] = `
<div class="v-checkbox">
  <div class="v-checkbox__square">
    <i class="v-icon bar primary--text"
       style="font-size: 24px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set disabled and match snapshot 1`] = `
<div class="v-checkbox v-checkbox--disabled">
  <div class="v-checkbox__square">
    <i class="v-icon v-icon--disabled far fa-square"
       style="font-size: 24px; color: rgb(33, 150, 243); caret-color: #2196f3;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set label and match snapshot 1`] = `
<div class="v-checkbox">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 24px;"
    >
    </i>
  </div>
  <label class="v-label v-checkbox__label"
         style="left: 0px; position: relative;"
  >
    checkbox label
  </label>
</div>
`;

exports[`VCheckbox should set validate and match snapshot 1`] = `
<div class="v-checkbox v-validatable">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square primary--text"
       style="font-size: 24px;"
    >
    </i>
  </div>
</div>
`;

exports[`VCheckbox should set validate and match snapshot 2`] = `
<div class="v-checkbox v-validatable">
  <div class="v-checkbox__square">
    <i class="v-icon far fa-square"
       style="font-size: 24px; color: rgb(255, 23, 68); caret-color: #ff1744;"
    >
    </i>
  </div>
</div>
`;
